...
  static const String routeName = '/';

  @override
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: const CustomAppBar(
          title: 'E-shop',
          automaticallyImplyLeading: false,
        ),
        bottomNavigationBar: const CustomNavBar(screen: routeName),
        body: Column(
          children: [
            Container(child: BlocBuilder<CategoryBloc, CategoryState>(
...
